--- a/uploadDeme/src/main/resources/static/index.html
+++ b/uploadDeme/src/main/resources/static/index.html
@@ -2,14 +2,19 @@
 <html lang="zh-CN">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>上传页面</title>
 </head>
 <body>
     <h1>上传页面</h1>
     <form method="post" action="/upload" enctype="multipart/form-data">
         <fieldset>
-            <input type="file" multiple="true" name="files" lable="选择文件" />
-            <input type="submit" label="上传" />
+            <div style="text-align: center">
+                <input type="file" multiple="true" name="files" lable="选择文件" />
+            </div>
+            <div style="text-align: center;margin-top:20px">
+                <input type="submit" label="上传" />
+            </div>
         </fieldset>
     </form>
 
